<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardView.Light"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    app:cardCornerRadius="16dp"
    app:cardBackgroundColor="@color/light_grey">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_resto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/img_resto"
            android:contentDescription="@string/resto_image" />

        <TextView
            android:id="@+id/tv_restaurant"
            android:layout_marginStart="8dp"
            style="@style/list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nama_restoran"
            android:textColor="@color/dark_blue"
            app:layout_constraintStart_toEndOf="@+id/iv_resto"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_city"
            android:layout_marginTop="4dp"
            android:textColor="@color/dark_blue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kota"
            style="@style/list_city"
            app:layout_constraintStart_toStartOf="@+id/tv_restaurant"
            app:layout_constraintTop_toBottomOf="@id/tv_restaurant" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_star"
            app:layout_constraintBottom_toBottomOf="@+id/tv_rating"
            app:layout_constraintRight_toLeftOf="@id/tv_rating"
            app:layout_constraintTop_toTopOf="@+id/tv_rating"
            android:contentDescription="@string/rating_star" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/list_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:text="@string/_0_0"
            app:layout_constraintBottom_toBottomOf="@id/tv_city"
            app:layout_constraintLeft_toRightOf="@id/tv_city"
            app:layout_constraintTop_toTopOf="@+id/tv_city" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>